<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.arvaria.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_documents"
            app:destination="@id/nav_documents" />
        <action
            android:id="@+id/action_nav_home_to_nav_inventory"
            app:destination="@id/nav_inventory" />
    </fragment>


    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.example.arvaria.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory">
    </fragment>
    <fragment
        android:id="@+id/nav_documents"
        android:name="com.example.arvaria.ui.documents.DocumentsFragment"
        android:label="@string/menu_documents"
        tools:layout="@layout/fragment_documents">
    </fragment>




</navigation>